--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,16 @@ buildscript {
         gradlePluginPortal()
         mavenCentral()
         jcenter()
-        maven { 
-            url "https://repo.spring.io/libs-milestone" 
+        maven {
+            url "https://repo.spring.io/libs-milestone"
             mavenContent { releasesOnly() }
         }
-        maven { 
-            url "https://repo.spring.io/libs-snapshot" 
+        maven {
+            url "https://repo.spring.io/libs-snapshot"
             mavenContent { snapshotsOnly() }
         }
-        maven { 
-            url "https://plugins.gradle.org/m2/" 
+        maven {
+            url "https://plugins.gradle.org/m2/"
             mavenContent { releasesOnly() }
         }
     }
@@ -30,25 +30,25 @@ repositories {
     mavenLocal()
     mavenCentral()
     jcenter()
-    maven { 
-        url "https://oss.sonatype.org/content/repositories/snapshots" 
+    maven {
+        url "https://oss.sonatype.org/content/repositories/snapshots"
         mavenContent { snapshotsOnly() }
     }
-    maven { 
+    maven {
         mavenContent { releasesOnly() }
-        url "https://build.shibboleth.net/nexus/content/repositories/releases/" 
+        url "https://build.shibboleth.net/nexus/content/repositories/releases/"
     }
-    maven { 
+    maven {
         mavenContent { releasesOnly() }
-        url "https://repo.spring.io/milestone/" 
+        url "https://repo.spring.io/milestone/"
     }
-    maven { 
-        url "https://repo.spring.io/snapshot/" 
+    maven {
+        url "https://repo.spring.io/snapshot/"
         mavenContent { snapshotsOnly() }
     }
-    maven { 
+    maven {
         mavenContent { snapshotsOnly() }
-        url "https://oss.jfrog.org/artifactory/oss-snapshot-local" 
+        url "https://oss.jfrog.org/artifactory/oss-snapshot-local"
     }
 }
 
@@ -82,6 +82,7 @@ dependencies {
     }
     // CAS dependencies/modules may be listed here statically...
     implementation "org.apereo.cas:cas-server-webapp-init:${casServerVersion}"
+    implementation "org.apereo.cas:cas-server-support-swagger:${project.'cas.version'}"
 }
 
 tasks.findByName("jibDockerBuild")
