add configuration to enable admin dashboard

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -2,6 +2,19 @@
 cas.server.name=http://localhost:8080
 cas.server.prefix=${cas.server.name}/cas
 
+#custom properties
+cas.adminPagesSecurity.actuatorEndpointsEnabled=true
+cas.monitor.endpoints.enabled=true
+endpoints.enabled=true
+# cas.adminPagesSecurity.ip:
+cas.monitor.endpoints.sensitive=false
+endpoints.sensitive=false
+cas.adminPagesSecurity.loginUrl=${cas.server.prefix}/login
+cas.adminPagesSecurity.service=${cas.server.prefix}/status/dashboard
+cas.adminPagesSecurity.users=file:/etc/cas/config/admusers.properties
+
+cas.adminPagesSecurity.adminRoles[0]=ROLE_ADMIN
+
 logging.config=file:/etc/cas/config/log4j2.xml
 
 # cas.authn.accept.users=
