--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,8 @@ dependencies {
     // CAS dependencies/modules may be listed here statically...
     implementation "org.apereo.cas:cas-server-webapp-init:${casServerVersion}"
     implementation "org.apereo.cas:cas-server-support-swagger:${project.'cas.version'}"
+    implementation "org.apereo.cas:cas-server-core-events-configuration:${project.'cas.version'}"
+
 }
 
 tasks.findByName("jibDockerBuild")
