update config properties

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -3,17 +3,17 @@ cas.server.name=http://localhost:8080
 cas.server.prefix=${cas.server.name}/cas
 
 #custom properties
-cas.adminPagesSecurity.actuatorEndpointsEnabled=true
+management.endpoints.actuatorEndpointsEnabled=true
 cas.monitor.endpoints.enabled=true
 endpoints.enabled=true
-# cas.adminPagesSecurity.ip:
+# management.endpoints.ip:
 cas.monitor.endpoints.sensitive=false
 endpoints.sensitive=false
-cas.adminPagesSecurity.loginUrl=${cas.server.prefix}/login
-cas.adminPagesSecurity.service=${cas.server.prefix}/status/dashboard
-cas.adminPagesSecurity.users=file:/etc/cas/config/admusers.properties
+management.endpoints.loginUrl=${cas.server.prefix}/login
+management.endpoints.service=${cas.server.prefix}/status/dashboard
+management.endpoints.users=file:/etc/cas/config/admusers.properties
 
-cas.adminPagesSecurity.adminRoles[0]=ROLE_ADMIN
+management.endpoints.adminRoles[0]=ROLE_ADMIN
 
 logging.config=file:/etc/cas/config/log4j2.xml
 
