update config properties

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -3,17 +3,15 @@ cas.server.name=http://localhost:8080
 cas.server.prefix=${cas.server.name}/cas
 
 #custom properties
-management.endpoints.actuatorEndpointsEnabled=true
-cas.monitor.endpoints.enabled=true
+endpoints.actuatorEndpointsEnabled=true
 endpoints.enabled=true
-# management.endpoints.ip:
-cas.monitor.endpoints.sensitive=false
+# endpoints.ip:
 endpoints.sensitive=false
-management.endpoints.loginUrl=${cas.server.prefix}/login
-management.endpoints.service=${cas.server.prefix}/status/dashboard
-management.endpoints.users=file:/etc/cas/config/admusers.properties
-
-management.endpoints.adminRoles[0]=ROLE_ADMIN
+endpoints.sensitive=false
+endpoints.loginUrl=${cas.server.prefix}/login
+endpoints.service=${cas.server.prefix}/status/dashboard
+endpoints.users=file:/etc/cas/config/admusers.properties
+endpoints.adminRoles[0]=ROLE_ADMIN
 
 logging.config=file:/etc/cas/config/log4j2.xml
 
