update cas overlay

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -13,6 +13,7 @@ endpoints.service=${cas.server.prefix}/status/dashboard
 endpoints.users=file:/etc/cas/config/admusers.properties
 endpoints.adminRoles[0]=ROLE_ADMIN
 
+mamachue.lari=false
 logging.config=file:/etc/cas/config/log4j2.xml
 
 # cas.authn.accept.users=
